--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "^2.54.0",
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.3.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
@@ -59,6 +60,7 @@
     "memorystore": "^1.6.7",
     "mercadopago": "^2.8.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
