--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -81,7 +81,8 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.2.8",
@@ -108,7 +109,8 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "@types/react-router-dom": "^5.3.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
