--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -62,5 +62,6 @@
     "@types/ws": "^8.5.13",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1"
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
