--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -61,7 +61,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/ws": "^8.5.13",
     "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1"
+    "@types/react-dom": "^18.3.1",
     "@tailwindcss/typography": "^0.5.15"
   }
 }
