--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -39,7 +39,23 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "@tanstack/react-query": "^5.60.5",
-    "wouter": "^3.3.5"
+    "wouter": "^3.3.5",
+
+    "@radix-ui/react-tooltip": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-toast": "^1.1.7",
+    "@radix-ui/react-collapsible": "^1.1.6",
+    "@radix-ui/react-tabs": "^1.1.6",
+    "@radix-ui/react-switch": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2"
   },
   "devDependencies": {
     "typescript": "5.6.3",
