--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -55,7 +55,9 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2"
+    "@radix-ui/react-label": "^2.1.2",
+
+    "class-variance-authority": "^0.7.0"
   },
   "devDependencies": {
     "typescript": "5.6.3",
