--- a/rodrigues-modas-github-render-clean/package.json
+++ b/rodrigues-modas-github-render-clean/package.json
@@ -56,6 +56,7 @@
     "@radix-ui/react-slider": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.0.3",
 
     "class-variance-authority": "^0.7.0"
   },
